--- a/glTF-BinExporter/Export_glTF.csproj
+++ b/glTF-BinExporter/Export_glTF.csproj
@@ -39,7 +39,7 @@
   <ItemGroup>
     <Compile Include="..\..\..\..\version.cs" Link="Properties\version.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="glTFBinExporterPlugin.cs" />
+    <Compile Include="Export_glTFPlugin.cs" />
     <Compile Include="glTFExportOptions.cs" />
     <Compile Include="glTFExportOptionsDialog.cs" />
     <Compile Include="gltfSchemaDummy.cs" />
