Added support for importing the texture transform extension

--- a/glTFExtensions/glTFExtensions.csproj
+++ b/glTFExtensions/glTFExtensions.csproj
@@ -43,6 +43,7 @@
     <Compile Include="KHR_materials_ior.cs" />
     <Compile Include="KHR_materials_specular.cs" />
     <Compile Include="KHR_materials_transmission.cs" />
+    <Compile Include="KHR_texture_transform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
